--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -14,6 +14,7 @@ ul {
 li {
     position: absolute;
     display: -webkit-box;
+    -webkit-box-orient: vertical;
     -webkit-box-pack: center;
     -webkit-box-align: center;
 }
