--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -4,26 +4,33 @@ body{
 	background: #333;
 	overflow: hidden;
 }
-li,ul{
+/*ul wrapper*/
+#canvas{
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	position: absolute;
+}
+
+.MSlider-ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	overflow: hidden;
 }
-li{
+.MSlider-li {
 	position: absolute;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	overflow: hidden;
 	display: -webkit-box;
 	-webkit-box-pack: center;
 	-webkit-box-align: center;
+	list-style: none;
 }
-li img{
+.MSlider-li  img{
 	max-width: 100%;
 	max-height: 100%;
-}
-#canvas{
-	height: 100%;
-	width: 100%;
-	overflow: hidden;
-	position: absolute;
 }
