--- a/demo/dom/css/common.css
+++ b/demo/dom/css/common.css
@@ -4,8 +4,7 @@ body {
     overflow: hidden;
 }
 
-li,
-ul {
+.MSlider-ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -13,41 +12,39 @@ ul {
     overflow: hidden;
 }
 
-li {
+.MSlider-li {
     position: absolute;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-box-pack: center;
     -webkit-box-align: center;
+    list-style: none;
 }
 
-li img {
+.MSlider-li  img {
     max-width: 100%;
     max-height: 100%;
 }
 
-#tip {
+#MSlider-tip {
     padding: 10px;
     z-index: 4;
 }
 
-#tip p {
+#MSlider-tip p {
     margin: 5px 0;
 }
 
-#content {
+#MSlider-content {
     position: relative;
     overflow: hidden;
 }
 
-#info {
-    position: absolute;
-    top: 68px;
-    left: 360px;
-    z-index: 4;
-}
-
-#outer {
+#MSlider-outer {
     height: 600px;
     width: 400px;
     background: url('../imgs/bg_1.jpeg') no-repeat top center;
@@ -57,7 +54,7 @@ li img {
     -webkit-transition: all .3s;
 }
 
-#canvas {
+#MSlider-canvas {
     width: 217px;
     height: 381px;
     position: absolute;
@@ -67,16 +64,17 @@ li img {
     background: #FFF;
 }
 
-#nav {
+#MSlider-nav {
     display: -webkit-box;
     border-bottom: 1px solid #999;
+    background-color: #eee;
 }
 
-#nav a:last-child{
+#MSlider-nav a:last-child{
     border-right: none;
 }
 
-#nav a{
+#MSlider-nav a{
     -webkit-box-flex: 1;
     -webkit-transition: all 0.5 ease;
     display: block;
@@ -89,10 +87,10 @@ li img {
     position: relative;
 }
 
-#nav a.on {
+#MSlider-nav a.on {
 }
 
-#nav a.on:after {
+#MSlider-nav a.on:after {
     content: '';
     display: block;
     position: absolute;
@@ -105,7 +103,7 @@ li img {
     margin: 0 10%;
 }
 
-#show {
+#MSlider-show {
     position: absolute;
     top: 30px;
     bottom: 0;
@@ -114,7 +112,7 @@ li img {
 }
 
 /* controller */
-#menu {
+#MSlider-menu {
     color: #000;
     font-size: 14px;
     position: absolute;
@@ -125,25 +123,25 @@ li img {
     -webkit-transition: all .2s ease;
 }
 
-.rotated_menu {
+.MSlider-rotated-menu {
     top: 14px!important;
     left: 40px!important;
     width: auto!important;
 }
 
-.rotated_outer {
+.MSlider-rotated-outer {
     -webkit-transform: rotate(90deg);
     -webkit-transform-origin: 60% 48%%;
 }
 
-.rotated_canvas {
+.MSlider-rotated-canvas {
     width: 381px!important;
     height: 217px!important;
     top: 140px!important;
     left: 89px!important;
 }
 
-#menu span {
+#MSlider-menu span {
     display: inline-block;
     text-align: center;
     line-height: 24px;
@@ -153,7 +151,7 @@ li img {
     cursor: pointer;
 }
 
-#menu span.on{
+#MSlider-menu span.on{
     display: inline-block;
     text-align: center;
     line-height: 24px;
