--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -5,21 +5,21 @@ body{
 	overflow: hidden;
 }
 /*ul wrapper*/
-#MSlider-canvas{
+#iSlider-wrapper{
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
 	position: absolute;
 }
 
-.MSlider-ul {
+#iSlider-wrapper ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	overflow: hidden;
 }
-.MSlider-li {
+#iSlider-wrapper li {
 	position: absolute;
 	margin: 0;
 	padding: 0;
@@ -30,7 +30,7 @@ body{
 	-webkit-box-align: center;
 	list-style: none;
 }
-.MSlider-li  img{
+#iSlider-wrapper li  img{
 	max-width: 100%;
 	max-height: 100%;
 }
