--- a/demo/picture/css/common.css
+++ b/demo/picture/css/common.css
@@ -3,14 +3,16 @@ body {
     padding: 0;
     overflow: hidden;
 }
-#iSlider-canvas ul {
+
+#iSlider-show ul {
     list-style: none;
     margin: 0;
     padding: 0;
     height: 100%;
     overflow: hidden;
 }
-#iSlider-canvas li  {
+
+#iSlider-show li {
     position: absolute;
     margin: 0;
     padding: 0;
@@ -22,10 +24,12 @@ body {
     -webkit-box-align: center;
     list-style: none;
 }
-#iSlider-canvas li img {
+
+#iSlider-show li img {
     max-width: 100%;
     max-height: 100%;
 }
+
 #iSlider-tip {
     padding: 10px;
     z-index: 4;
@@ -39,13 +43,75 @@ body {
     position: relative;
     overflow: hidden;
 }
-#iSlider-info {
-    position: absolute;
-    top: 68px;
-    left: 360px;
-    z-index: 4;
+
+#iSlider-outer {
+    height: 600px;
+    width: 380px;
+    background: url('../imgs/bg_1.jpeg') no-repeat top center;
+    background-size: 100%;
+    overflow: hidden;
+    position: relative;
+    -webkit-transition: all .3s;
 }
 
+#iSlider-canvas {
+    width: 200px;
+    height: 358px;
+    position: absolute;
+    top: 57px;
+    left: 90px;
+    overflow: hidden;
+    background: #FFF;
+}
+
+#iSlider-nav {
+    display: -webkit-box;
+    border-bottom: 1px solid #c4c4c4;
+    background-color: #f7f7f8;
+}
+
+#iSlider-nav a:last-child{
+    border-right: none;
+}
+
+#iSlider-nav a{
+    -webkit-box-flex: 1;
+    -webkit-transition: all 0.5 ease;
+    display: block;
+    font-size: 12px;
+    text-align: center;
+    border-right: 1px solid #999;
+    height: 20px;
+    line-height: 30px;
+    cursor: pointer;
+    position: relative;
+}
+
+#iSlider-nav a.on {
+}
+
+#iSlider-nav a.on:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 2px;
+    opacity: 0.2;
+    background: red;
+    border-radius: 5px;
+    height: 20px;
+    width: 80%;
+    margin: 0 10%;
+}
+
+#iSlider-show {
+    position: absolute;
+    top: 20px;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+}
+
+/* controller */
 #iSlider-menu {
     color: #000;
     font-size: 14px;
@@ -58,8 +124,10 @@ body {
 }
 
 .iSlider-rotated-menu {
+    position: absolute;
     top: 14px!important;
     left: 40px!important;
+    bottom: 30px!important;
     width: auto!important;
 }
 
@@ -69,15 +137,22 @@ body {
 }
 
 .iSlider-rotated-canvas {
-    width: 381px!important;
-    height: 217px!important;
-    top: 140px!important;
-    left: 89px!important;
+    width: 358px!important;
+    height: 202px!important;
+    top: 149px!important;
+    left: 101px!important;
+    z-index: 3;
+}
+
+.iSlider-rotated-canvas span {
+    width: auto!important;
 }
 
 #iSlider-menu span {
     display: inline-block;
-    text-align: center;
+    width: 200px;
+    border-radius: 10px;
+    text-align: left;
     line-height: 24px;
     padding: 5px 10px;
     margin: 5px;
@@ -87,7 +162,7 @@ body {
 
 #iSlider-menu span.on{
     display: inline-block;
-    text-align: center;
+    text-align: left;
     line-height: 24px;
     padding: 5px 10px;
     margin: 5px;
@@ -95,92 +170,4 @@ body {
     cursor: pointer;
     color: #fff;
     background-color: #666;
-}
-
-#iSlider-outer {
-    height: 600px;
-    width: 400px;
-    background: url('../imgs/bg_1.jpeg') no-repeat top center;
-    background-size: 100%;
-    overflow: hidden;
-    position: relative;
-    -webkit-transition: all .3s;
-}
-
-#iSlider-canvas {
-    width: 217px;
-    height: 381px;
-    position: absolute;
-    top: 58px;
-    left: 92px;
-    overflow: hidden;
-    background: #333;
-}
-
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-
-    #iSlider-content {
-        height: 100%;
-        width: 100%;        
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-
-    #iSlider-outer {
-        height: 100%;
-        width: 100%;
-    }
-
-    #iSlider-tip {
-        position: absolute;
-        font-size: 12px;
-        background: #fff;
-        opacity: 0.8;
-        margin-top: -100%;
-        -webkit-transform: translateZ(0);
-        -webkit-transition: all 0.4s ease; 
-    }
-
-    #iSlider-tip.show {
-        margin-top: 0;
-    }
-
-    #iSlider-canvas {
-        height: 100%;
-        width: 100%;
-        top: 0;
-        left: 0;
-        background: #666;
-    }
-
-    #iSlider-menu {
-        top: auto;
-        bottom: 10px;
-        left: 10px;
-        font-size: 14px;
-        width: 100%;
-        margin-bottom: -100%;
-    }
-    #iSlider-menu.show {
-        margin-bottom: 0;
-    }
-
-    #iSlider-menu span, #menu span.on{
-        line-height: 18px;
-        padding: 2px 4px;
-        font-size: 12px;
-        background: #FFF;
-    }
-
-    #iSlider-menu span.on{
-        color: #FFF;
-        background: #999;
-    }
-
-    #iSlider-menu span:last-child{
-        display: none;
-    }
 }
