--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -120,7 +120,8 @@ body {
 
 /* controller */
 #iSlider-menu {
-    margin-left: 30px;
+    float: left;
+    width: 230px;
     color: #000;
     font-size: 14px;
     z-index: 2;
@@ -175,6 +176,14 @@ body {
     cursor: pointer;
     color: #fff;
     background-color: #666;
+}
+
+@media screen and (max-width:768px){
+
+    #iSlider-menu {
+        margin-left: 30px;
+    }
+
 }
 
 @media screen and (max-width:768px){
