--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -128,6 +128,10 @@ body {
     -webkit-transition: all .2s ease;
 }
 
+#iSlider-menu-tag {
+    display: none;
+}
+
 .iSlider-rotated-menu {
     margin-top: -130px!important;
     float: left;
@@ -184,10 +188,49 @@ body {
         background-color: #333;
     }
 
+    #iSlider-menu {
+        /*display: none;*/
+        position: absolute;
+        background-color: white;
+        border-radius: 10px;
+        margin-left: -230px;
+    }
+
+    #iSlider-menu-tag {
+        display: block;
+        position: absolute;
+        width: 250px;
+        height: 20px;
+        margin-left: -200px;
+        padding-right: 10px;
+        border-radius: 10px;
+        background-color: #ffffff;
+        color: #000000;
+        text-align: right;
+        line-height: 20px;
+    }
+
+    .iSlider-menu-animation {
+        -webkit-transition-property: "margin-left";
+        -webkit-transition-duration: '200ms';
+    }
+
+    .iSlider-menu-tag-animation {
+        -webkit-transition-property: "margin-left";
+        -webkit-transition-duration: '200ms';
+        -webkit-transition-delay: '600ms';
+    }
+
+    #iSlider-menu span:nth-child(4) {
+        display: none;
+    }
+
     #iSlider-outer {
         background: none;
-        /*height: 100%;*/
+        height: 100%;
+        min-height: 800px;
         width: 100%;
+        top: 0;
     }
 
     #iSlider-canvas {
@@ -202,16 +245,16 @@ body {
         display: none;
     }
 
+    #iSlider-show {
+        top: 0;
+    }
+
     #iSlider-show ul li{
         width: 100%;
     }
 
-}
-
-@media screen and (max-width:768px){
-
-    #iSlider-menu {
-        margin-left: 30px;
+    #iSlider-show li {
+        display: block;
     }
 
 }
