--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -1,46 +1,18 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: scroll;
     pointer-events: none;
-}
-
-#iSlider-show ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    width: 100%;
     height: 100%;
-    overflow: hidden;
-}
-
-#iSlider-show li {
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-box-pack: center;
-    -webkit-box-align: center;
-    list-style: none;
-}
-
-#iSlider-show li img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-#iSlider-show li div {
-    padding: 6px;
 }
 
 #iSlider-content {
-    position: relative;
     overflow: hidden;
+    height: 100%;
+    width: 100%;
 }
 
-#iSlider-outer {
+.iSlider-outer-pc {
     pointer-events: auto;
     margin-left: auto;
     margin-right: auto;
@@ -53,7 +25,15 @@ body {
     -webkit-transition: all .3s;
 }
 
-#iSlider-canvas {
+.iSlider-rotated-outer {
+    -webkit-transform: rotate(90deg);
+    -webkit-transform-origin: 60% 48%%;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: -1;
+}
+
+.iSlider-canvas-pc {
     height: 451px;
     width: 254px;
     position: absolute;
@@ -63,7 +43,14 @@ body {
     background: #000000;
 }
 
-#iSlider-nav {
+#iSlider-hidden {
+    position:relative;
+    height:100%;
+    width:366px;
+    overflow:hidden;
+}
+
+.iSlider-nav-pc {
     display: -webkit-box;
     background-color: #3498db;
 }
@@ -98,11 +85,13 @@ body {
     cursor: pointer;
 }
 
-#iSlider-show {
+.iSlider-show-pc {
     position: absolute;
     top: 32px;
     bottom: 0;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     overflow: hidden;
 }
 
@@ -111,7 +100,38 @@ body {
     -webkit-transform-origin: 50% 50%%;
 }
 
-#iSlider-option {
+#iSlider-show ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+#iSlider-show li {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
+    list-style: none;
+}
+
+#iSlider-show li img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#iSlider-show li div {
+    padding: 6px;
+}
+
+
+.iSlider-option-pc {
     height: 451px;
     width: 254px;
     position: absolute;
@@ -154,36 +174,40 @@ body {
     background-color: #666;
 }
 
-.iSlider-rotated-outer {
-    -webkit-transform: rotate(90deg);
-    -webkit-transform-origin: 60% 48%%;
-    margin-left: auto;
-    margin-right: auto;
-   /* margin-top: -50px;
-    margin-left: 30px;*/
-    z-index: -1;
-}
-
 @media screen and (max-width:1024px){
 
     body {
         background-color: #333;
     }
 
-    .iSlider-menu-animation {
-        -webkit-transition-property: "margin-left";
-        -webkit-transition-duration: '200ms';
+    #iSlider-outer {
+        position: absolute;
+        background: none;
+        height: 100%;
+        width: 100%;
     }
 
-    .iSlider-menu-tag-animation {
-        -webkit-transition-property: "margin-left";
-        -webkit-transition-duration: '200ms';
-        -webkit-transition-delay: '600ms';
+    #iSlider-hidden {
+        position: relative;
+        max-width: 100%;
+        height: 100%;
+        /*top: 32px;*/
+        bottom: 0;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        overflow: hidden;
+        background-color: #ffffff;
+        text-align: center;
     }
 
-
-    #iSlider-show {
-        top: 0;
+     #iSlider-canvas {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin-top: 0;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #iSlider-show ul li{
@@ -193,44 +217,14 @@ body {
         -webkit-box-align: center;
     }
 
-}
-
-@media screen and (max-width:1024px) and (orientation:landscape){
-    #iSlider-outer {
-        background: none;
-        width: 100%;
-    }
-
-    #iSlider-canvas {
+    #iSlider-option {
         width: 100%;
         height: 100%;
         margin-top: 0;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 0;
+        text-align: left;
     }
 
-    #iSlider-show {
-        height: 100%;
-    }
-}
-
-@media screen and (max-width:1024px) and (orientation:portrait){
-
-    #iSlider-outer {
-        background: none;
-        width: 100%;
-    }
-
-    #iSlider-canvas {
-        width: 100%;
-        height: 100%;
-        margin-top: 0;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-@media screen and (max-width:1024px){
     #iSlider-option ul li:nth-child(4) {
         display: none;
     }
