--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -58,7 +58,10 @@ body {
 #iSlider-dom-nav {
     display: none;
     position: absolute;
+    width: 100%;
+    text-align: left;
     pointer-events: auto;
+    background-color: #ffffff;
     z-index: 10000;
     cursor: pointer;
 }
@@ -123,7 +126,8 @@ body {
 .dom-demo {
     margin-top: 10px;
     margin-left: -5px;
-    width: 1000px;
+    padding: 10px;
+    left: 50%;
     width: 100%;
     height: 100%;
 }
@@ -175,13 +179,14 @@ body {
     list-style: none;
 }
 
-#iSlider-show li img {
+#iSlider-show ul li img {
     max-width: 100%;
     max-height: 100%;
 }
 
-#iSlider-show li div {
-    padding: 6px;
+#iSlider-show ul li div {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 
